--- a/src/styles/modal.less
+++ b/src/styles/modal.less
@@ -1,5 +1,6 @@
 .ReactModal__Body--open {
   overflow: hidden;
+  animation: fadein 2s;
 }
 
 .overlay {
@@ -9,4 +10,22 @@
     right: 0;
     bottom: 0;
     background: rgba(255, 255, 255, 0.75);
+}
+
+.modal__close__cta {
+  border: 1px solid #BCBCBC;
+  background: transparent;
+  width: 30px;
+  height: 30px;
+  right: -30px;
+  top: -35px;
+  overflow: visible;
+  position: absolute;
+  border-radius: 50%;
+  outline: 0;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
