Display each channels logo

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -44,6 +44,9 @@
 @import "~bootstrap/less/responsive-utilities";
 
 // Custom
+
+@import './mixins';
+
 @import './colours';
 @import './variables';
 @import './elements';
@@ -54,4 +57,5 @@
 @import './indicator';
 @import './modal';
 @import './programme-details';
+@import './logo';
 @import './app';
