--- a/src/styles/schedule-item.less
+++ b/src/styles/schedule-item.less
@@ -32,20 +32,5 @@
 }
 
 .highlight {
-
-  .fv56lj0 & {
-	  background: lightsalmon;
-  }
-
-  .hq09ky1 & {
-	  background: beige;
-  }
-
-  .kl05fx3 & {
-  	background: #def;
-  }
-
-  .vf63ko9 & {
-  	background: cyan;
-  }
+  .channelBg()
 }
