--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -1,5 +1,5 @@
 // Width variables (appears count calculates by raw css)
-@width0: 100%; // Appears 2 times
+$width0: 100%; // Appears 2 times
 
 // html {
 // 	box-sizing: border-box;
@@ -17,14 +17,13 @@
 
 [type="text"],
 select {
-	background-color: @white;
+	background-color: $white;
 	border-radius: 2px;
-	border: 1px solid @color1;
-	color: @color0;
+	border: 1px solid $color1;
+	color: $color0;
 	display: block;
 	padding: 8px 10px;
-	width: @width0;
-  background-color: @white;
+	width: $width0;
 }
 
 .file-chooser {
@@ -89,16 +88,16 @@ select {
 	&.submit {
 		&:hover,
 	  &:focus {
-	    background-color: lighten(@brand-primary, 5%);
-	    border-color: lighten(@brand-primary, 5%);
+	    background-color: lighten($brand-primary, 5%);
+	    border-color: lighten($brand-primary, 5%);
 	  }
 	}
 
 	&.delete {
 		&:hover,
 		&:focus {
-			background-color: lighten(@brand-primary, 5%);
-			border-color: lighten(@brand-primary, 5%);
+			background-color: lighten($brand-primary, 5%);
+			border-color: lighten($brand-primary, 5%);
 		}	
 	}
 }
