--- a/src/styles/_programme-guide.scss
+++ b/src/styles/_programme-guide.scss
@@ -9,9 +9,10 @@
       float: left;
       background: #343A4B;
       text-align: center;
-      width: 150px;
+      height: 100%;
+      width: 64px;
       padding: 10px;
-      z-index: @zindex0;
+      z-index: $zindex0;
       position: relative;
     }
   }
@@ -23,7 +24,7 @@
     font-size: 1.2rem;
     line-height: 1.6;
     list-style: none;
-    margin: 0 0 0 150px;
+    margin: 0;
     padding: 0;
     width: 3792px;
     transition: transform 0.5s ease;
@@ -54,13 +55,13 @@
       height: 100%;
       position: relative;
       text-align: center;
-      width: 150px;
-      z-index: @zindex0;
+      // width: 150px;
+      z-index: $zindex0;
     }
 
     &__items {
       width: 3790px;
-      margin-left: 150px;
+      // margin-left: 150px;
       transition: transform 0.5s ease;
       height: 100%;
     }
@@ -76,7 +77,7 @@
 
     .previous,
     .next {
-      background: lighten(@brand-primary, 5%);
+      background: lighten($brand-primary, 5%);
       border: 0;
       cursor: pointer;
       float: left;
@@ -86,7 +87,7 @@
       transition:.5s;
 
       &:hover {
-        background: darken(@brand-primary, 10%);
+        background: darken($brand-primary, 10%);
       }
 
       &[disabled] {
@@ -115,4 +116,13 @@
 @keyframes fadein {
   from { opacity: 0; }
   to { opacity: 1; }
+}
+
+@include media-breakpoint-up(lg) {
+  .programme-guide {
+    &__header__legend,
+    &__row__header {
+      width: 140px;
+    }
+  }
 }
