--- a/src/styles/_schedule-item.scss
+++ b/src/styles/_schedule-item.scss
@@ -23,6 +23,10 @@
 
     &__title {
       font-size: 1.3rem;
+      font-weight: 600;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &:first-child {
@@ -32,5 +36,5 @@
 }
 
 .highlight {
-  .channelBg()
+  @include channelBg()
 }
